[project]
name = "trustwise-mcp"
version = "0.1.0a1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-mcp>=0.3.3",
    "trustwise>=0.1.0a13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trustwise-mcp"]
