[project]
name = "trustwise-mcp"
version = "1.0.0b2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-mcp>=0.3.3",
    "trustwise==1.0.0b2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trustwise-mcp"]
